--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,10 @@ python:
 install:
   - pip install 'requests>=2.7'
 
+install:
+	pip install codecov
+
+after_success:
+  codecov
+
 script: make test
