--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ python:
 
 install:
   - pip install 'requests>=2.7'
-
-install:
-	pip install codecov
+  - pip install codecov
 
 after_success:
   codecov
