--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install 'requests>=2.7'
   - pip install codecov
 
-after_success:
-  codecov
+script: coverage run -m unittest
 
-script: python -m unittest --verbose
+after_success:
+  - codecov
