added more works test, started working with coveralls, not done yet

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ python:
 
 install:
   - pip install 'requests>=2.7'
-  - pip install codecov
+  - pip install coveralls
 
-script: nosetests
+script:
+	- coverage run test
 
 after_success:
-  - codecov
+  - coveralls
