install vcrpy on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 install:
   - pip install 'requests>=2.7'
   - pip install coveralls
+  - pip install vcrpy
 
 script:
   - nosetests -v --cover-package=habanero
