--- a/test/vcr_cassettes/prefixes_works.yaml
+++ b/test/vcr_cassettes/prefixes_works.yaml
@@ -5,32 +5,31 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.1 habanero/0.5.0.2]
+      X-USER-AGENT: [python-requests/2.18.1 habanero/0.5.0.2]
     method: GET
     uri: https://api.crossref.org/prefixes/10.1016/works?sample=2
   response:
-    body: {string: !!python/unicode '{"status":"ok","message-type":"work-list","message-version":"1.0.0","message":{"facets":{},"items-per-page":20,"query":{"start-index":0,"search-terms":null},"total-results":15023195,"items":[{"indexed":{"date-parts":[[2017,6,17]],"date-time":"2017-06-17T16:14:09Z","timestamp":1497716049832},"reference-count":39,"publisher":"Elsevier
-        BV","issue":"2","license":[{"URL":"http:\/\/www.elsevier.com\/tdm\/userlicense\/1.0\/","start":{"date-parts":[[2007,1,1]],"date-time":"2007-01-01T00:00:00Z","timestamp":1167609600000},"delay-in-days":0,"content-version":"tdm"}],"content-domain":{"domain":[],"crossmark-restriction":false},"short-container-title":["International
-        Biodeterioration & Biodegradation"],"published-print":{"date-parts":[[2007,1]]},"DOI":"10.1016\/j.ibiod.2007.02.001","type":"journal-article","created":{"date-parts":[[2007,3,24]],"date-time":"2007-03-24T11:06:19Z","timestamp":1174734379000},"page":"116-125","source":"Crossref","is-referenced-by-count":0,"title":["Organic
-        matter evolution and partial detoxification in two-phase olive mill waste
-        colonized by white-rot fungi"],"prefix":"10.1016","volume":"60","author":[{"given":"Inmaculada","family":"Sampedro","affiliation":[]},{"given":"Sara","family":"Marinari","affiliation":[]},{"given":"Alessandro","family":"D\u2019Annibale","affiliation":[]},{"given":"Stefano","family":"Grego","affiliation":[]},{"given":"Juan
-        A.","family":"Ocampo","affiliation":[]},{"given":"Inmaculada","family":"Garc\u00eda-Romera","affiliation":[]}],"member":"78","container-title":["International
-        Biodeterioration & Biodegradation"],"original-title":[],"link":[{"URL":"http:\/\/api.elsevier.com\/content\/article\/PII:S0964830507000182?httpAccept=text\/xml","content-type":"text\/xml","content-version":"vor","intended-application":"text-mining"},{"URL":"http:\/\/api.elsevier.com\/content\/article\/PII:S0964830507000182?httpAccept=text\/plain","content-type":"text\/plain","content-version":"vor","intended-application":"text-mining"}],"deposited":{"date-parts":[[2017,6,17]],"date-time":"2017-06-17T15:39:36Z","timestamp":1497713976000},"score":1.0,"subtitle":[],"short-title":[],"issued":{"date-parts":[[2007,1]]},"references-count":39,"alternative-id":["S0964830507000182"],"URL":"http:\/\/dx.doi.org\/10.1016\/j.ibiod.2007.02.001","relation":{},"ISSN":["0964-8305"],"issn-type":[{"value":"0964-8305","type":"print"}]},{"indexed":{"date-parts":[[2017,6,15]],"date-time":"2017-06-15T18:53:26Z","timestamp":1497552806705},"reference-count":12,"publisher":"Elsevier
-        BV","issue":"1","license":[{"URL":"http:\/\/www.elsevier.com\/tdm\/userlicense\/1.0\/","start":{"date-parts":[[1976,2,1]],"date-time":"1976-02-01T00:00:00Z","timestamp":191980800000},"delay-in-days":0,"content-version":"tdm"}],"content-domain":{"domain":[],"crossmark-restriction":false},"short-container-title":["Clinica
-        Chimica Acta"],"published-print":{"date-parts":[[1976,2]]},"DOI":"10.1016\/0009-8981(76)90219-9","type":"journal-article","created":{"date-parts":[[2003,2,11]],"date-time":"2003-02-11T21:17:38Z","timestamp":1044998258000},"page":"79-83","source":"Crossref","is-referenced-by-count":0,"title":["Electrophoresis
-        of \u03b3-glutamyltranspeptidase on cellogel. The appearance of the \u03b12-\u03b2
-        band in positive LP-X sera"],"prefix":"10.1016","volume":"67","author":[{"given":"C.P.","family":"Degenaar","affiliation":[]},{"given":"Carla","family":"Thijssen","affiliation":[]},{"given":"G.","family":"Van
-        Der Wal","affiliation":[]},{"given":"G.T.","family":"Berends","affiliation":[]}],"member":"78","container-title":["Clinica
-        Chimica Acta"],"original-title":[],"link":[{"URL":"http:\/\/api.elsevier.com\/content\/article\/PII:0009898176902199?httpAccept=text\/xml","content-type":"text\/xml","content-version":"vor","intended-application":"text-mining"},{"URL":"http:\/\/api.elsevier.com\/content\/article\/PII:0009898176902199?httpAccept=text\/plain","content-type":"text\/plain","content-version":"vor","intended-application":"text-mining"}],"deposited":{"date-parts":[[2017,6,15]],"date-time":"2017-06-15T18:13:57Z","timestamp":1497550437000},"score":1.0,"subtitle":[],"short-title":[],"issued":{"date-parts":[[1976,2]]},"references-count":12,"alternative-id":["0009898176902199"],"URL":"http:\/\/dx.doi.org\/10.1016\/0009-8981(76)90219-9","relation":{},"ISSN":["0009-8981"],"issn-type":[{"value":"0009-8981","type":"print"}],"subject":["Clinical
-        Biochemistry","Biochemistry","Biochemistry, medical"]}]}}'}
+    body: {string: !!python/unicode '{"status":"ok","message-type":"work-list","message-version":"1.0.0","message":{"facets":{},"total-results":15211530,"items":[{"indexed":{"date-parts":[[2017,8,26]],"date-time":"2017-08-26T15:03:15Z","timestamp":1503759795364},"reference-count":3,"publisher":"Elsevier
+        BV","issue":"6","license":[{"URL":"http:\/\/www.elsevier.com\/tdm\/userlicense\/1.0\/","start":{"date-parts":[[1954,12,1]],"date-time":"1954-12-01T00:00:00Z","timestamp":-476064000000},"delay-in-days":0,"content-version":"tdm"}],"content-domain":{"domain":[],"crossmark-restriction":false},"short-container-title":["The
+        Journal of Urology"],"published-print":{"date-parts":[[1954,12]]},"DOI":"10.1016\/s0022-5347(17)67736-x","type":"journal-article","created":{"date-parts":[[2017,7,11]],"date-time":"2017-07-11T22:55:33Z","timestamp":1499813733000},"page":"1218-1221","source":"Crossref","is-referenced-by-count":9,"title":["Allergic
+        Granuloma of the Prostate"],"prefix":"10.1016","volume":"72","author":[{"given":"Francis
+        G.","family":"Harrison","affiliation":[]},{"given":"David G.","family":"Neander","affiliation":[]}],"member":"78","container-title":["The
+        Journal of Urology"],"link":[{"URL":"http:\/\/api.elsevier.com\/content\/article\/PII:S002253471767736X?httpAccept=text\/xml","content-type":"text\/xml","content-version":"vor","intended-application":"text-mining"},{"URL":"http:\/\/api.elsevier.com\/content\/article\/PII:S002253471767736X?httpAccept=text\/plain","content-type":"text\/plain","content-version":"vor","intended-application":"text-mining"}],"deposited":{"date-parts":[[2017,7,11]],"date-time":"2017-07-11T22:55:35Z","timestamp":1499813735000},"score":1.0,"issued":{"date-parts":[[1954,12]]},"references-count":3,"alternative-id":["S002253471767736X"],"URL":"http:\/\/dx.doi.org\/10.1016\/s0022-5347(17)67736-x","ISSN":["0022-5347"],"issn-type":[{"value":"0022-5347","type":"print"}],"subject":["Urology"]},{"indexed":{"date-parts":[[2017,8,7]],"date-time":"2017-08-07T20:03:35Z","timestamp":1502136215922},"reference-count":9,"publisher":"Elsevier
+        BV","issue":"2-3","license":[{"URL":"http:\/\/www.elsevier.com\/tdm\/userlicense\/1.0\/","start":{"date-parts":[[1999,10,1]],"date-time":"1999-10-01T00:00:00Z","timestamp":938736000000},"delay-in-days":0,"content-version":"tdm"}],"content-domain":{"domain":[],"crossmark-restriction":false},"short-container-title":["Journal
+        of Affective Disorders"],"published-print":{"date-parts":[[1999,10]]},"DOI":"10.1016\/s0165-0327(98)00198-0","type":"journal-article","created":{"date-parts":[[2002,12,28]],"date-time":"2002-12-28T12:42:19Z","timestamp":1041079339000},"page":"237-240","source":"Crossref","is-referenced-by-count":20,"title":["Open
+        maintenance treatment of bipolar disorder spectrum patients who responded
+        to gabapentin augmentation in the acute phase of treatment"],"prefix":"10.1016","volume":"55","author":[{"given":"Charles
+        B","family":"Schaffer","affiliation":[]},{"given":"Linda C","family":"Schaffer","affiliation":[]}],"member":"78","container-title":["Journal
+        of Affective Disorders"],"link":[{"URL":"http:\/\/api.elsevier.com\/content\/article\/PII:S0165032798001980?httpAccept=text\/xml","content-type":"text\/xml","content-version":"vor","intended-application":"text-mining"},{"URL":"http:\/\/api.elsevier.com\/content\/article\/PII:S0165032798001980?httpAccept=text\/plain","content-type":"text\/plain","content-version":"vor","intended-application":"text-mining"}],"deposited":{"date-parts":[[2017,6,14]],"date-time":"2017-06-14T20:26:09Z","timestamp":1497471969000},"score":1.0,"issued":{"date-parts":[[1999,10]]},"references-count":9,"alternative-id":["S0165032798001980"],"URL":"http:\/\/dx.doi.org\/10.1016\/s0165-0327(98)00198-0","ISSN":["0165-0327"],"issn-type":[{"value":"0165-0327","type":"print"}],"subject":["Clinical
+        Psychology","Psychiatry and Mental health"]}],"items-per-page":20,"query":{"start-index":0,"search-terms":null}}}'}
     headers:
       access-control-allow-headers: [X-Requested-With]
       access-control-allow-origin: ['*']
       connection: [close]
-      content-length: ['4444']
+      content-length: ['3906']
       content-type: [application/json;charset=UTF-8]
-      date: ['Fri, 21 Jul 2017 01:57:23 GMT']
+      date: ['Sun, 15 Oct 2017 20:21:50 GMT']
       server: [http-kit]
       vary: [Accept]
       x-rate-limit-interval: [1s]
